[package]
name = "robot_pid_controller"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time     = { version = "0.5.0", features = ["tick-hz-1_000", "defmt"] }

embassy-stm32 = { version = "0.4.0", features = [
  "stm32h723zg",
  "time-driver-tim2",
  "exti",
  "unstable-pac",
  "defmt"
] }

embedded-hal = "1.0.0"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt  = "0.7.5"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
pid          = "4.0.0"

[dev-dependencies]
defmt-test = "0.4.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# [patch.crates-io]
# embassy-executor = { git = "https://github.com/embassy-rs/embassy"}
# embassy-sync = { git = "https://github.com/embassy-rs/embassy"}
# embassy-time = { git = "https://github.com/embassy-rs/embassy"}
# embassy-stm32 = { git = "https://github.com/embassy-rs/embassy"}
